--- a/source/sass/c_local/_slick/_slick.sass
+++ b/source/sass/c_local/_slick/_slick.sass
@@ -290,17 +290,18 @@ _::-webkit-full-page-media, _:future, :root .slideshow .item figure:before
   right: 0
   color: $white
   border-radius: 100px
-  background: none
-  border: 2px solid $white
+  background: $black
+  color: $clr2
+  border: 2px solid $clr2
   width: 30px
   min-width: auto
   height: 30px
   margin: 10px
   padding: 0
   &:hover
-    border: 2px solid $white
-    background: unset
-    color: $white
+    border: 2px solid $black
+    background: $clr2
+    color: $black
 
 .slideshow-block, .slideshow-with-audio
   border-bottom-right-radius: $borderRadius
